--- a/style.css
+++ b/style.css
@@ -231,7 +231,7 @@ body {
 @media (max-width: 768px) {
 
     nav ul {
-        background-color: transparent !important; /* পুরো মেনু transparent */
+        background-color: #ffffff !important; /* পুরো মেনু transparent */
     }
 
     nav ul li {
@@ -249,6 +249,6 @@ body {
     }
 
     nav ul li a:hover {
-        background-color: #f2f2f2 !important;
+        background-color: #ffffff !important;
     }
 }
