--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@ header {
 
 .parabar-headline-box {
     background: linear-gradient(90deg, #ffcc00, #ff8800);
-    padding: 40px 20px;
+    padding: 30 15px;
     text-align: center;
     border-radius: 10px;
 }
