--- a/style.css
+++ b/style.css
@@ -515,7 +515,7 @@ footer {
 
 .home-buttons a {
   background: linear-gradient(45deg, #ffcc00, #ff8800);
-  color: black;
+  color: #222;
   padding: 12px 10px;
   border-radius: 20px;
   text-decoration: none;
